# just-another-rss-reader

./: .gitignore  .pre-commit-config-yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  collect.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  rss_list.txt  run.py
.github/workflows/: ci.yml  collect.yaml
alembic/: env.py
alembic/versions/: 47141f58bd15_remove_feed_url.py  47708a3f583c_.py  4b4ae319d31d_addig_initial_tables_for_articles.py  dacd4d58bad7_adding_initial_models.py  ee37cf6b9091_added_account_table.py  ffbaca69f443_removing_unique.py
src/: config.py  coordinator.py  feed_models.py  fetch.py  request.py  settings.py  text_process.py
src/app/: main.py
src/app/static/: main.min.css
src/app/templates/: index.html
src/db/: __init__.py  articles.py  session.py
src/db/models/: __init__.py  articles.py
src/fetcher/: coordinator.py  feed_models.py  fetch.py  request.py  text_process.py
src/web_app/: main.py
src/web_app/static/: main.min.css
src/web_app/templates/: index.html
src/web_app/tests/: common.py  conftest.py  factories.py  test_db_service.py  test_template_views.py
storage/: db.sqlite3
