[tool.poetry]
name = "just-another-rss-reader"
version = "0.1.0"
description = "Just another hosted Rss Reader"
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.7.4"
sumy = "^0.10.0"
feedparser = "^6.0.8"
httpx = "^0.22.0"
aiosqlite = "^0.17.0"
spacy = "^3.2.4"
pytailwindcss = "0.1.4"
starlette = "^0.20.4"
uvicorn = "^0.18.2"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
yarl = "^1.8.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
ipython = "black"
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^5.0.4"
darker = {extras = ["isort"], version = "^1.5.0"}

[tool.isort]
line_length = 120
atomic = true
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
default_section = "THIRDPARTY"
length_sort = true
skip = "venv/"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
line-length = 120
extend-exclude = '''
/(
    \.git
  | media
  | static
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app:run"
