[tool.poetry]
name = "just-another-rss-reader"
version = "0.1.0"
description = "Just another hosted Rss Reader"
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
sumy = "^0.10.0"
feedparser = "^6.0.8"
httpx = "^0.22.0"
aiosqlite = "^0.17.0"
spacy = "^3.2.4"
pytailwindcss = "0.1.4"
starlette = "^0.20.4"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
yarl = "^1.8.1"
python-dotenv = "^0.21.0"
SQLAlchemy = {extras = ["asyncpg"], version = "^1.4.41"}
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^5.0.4"
darker = {extras = ["isort"], version = "^1.5.0"}
pytest = "^7.2.0"
SQLAlchemy-Utils = "^0.38.3"
ipython = "^8.6.0"
pytest-asyncio = "^0.20.1"
factory-boy = "^3.2.1"
trio = "^0.22.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
ipython = "^8.8.0"
ruff = "^0.0.261"
pre-commit = "^3.2.2"

[tool.isort]
line_length = 120
atomic = true
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
default_section = "THIRDPARTY"
length_sort = true
skip = "venv/"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
line-length = 120
extend-exclude = '''
/(
    \.git
  | media
  | static
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app:run"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
